--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
 ACLOCAL_AMFLAGS= -I m4
-noinst_HEADERS=DodgeBall.h SoundManager.h GUIManager.h Simulator.h NetworkManager.h Player.h Enemy.h Ball.h PlayerManager.h
+noinst_HEADERS=DodgeBall.h SoundManager.h GUIManager.h Simulator.h NetworkManager.h Player.h Enemy.h Ball.h PlayerManager.h BallManager.h
 
 bin_PROGRAMS= DodgeBall
 DodgeBall_CPPFLAGS= -I$(top_srcdir)
-DodgeBall_SOURCES=DodgeBall.cpp SoundManager.cpp GUIManager.cpp Simulator.cpp NetworkManager.cpp Player.cpp Enemy.cpp Ball.cpp PlayerManager.cpp
+DodgeBall_SOURCES=DodgeBall.cpp SoundManager.cpp GUIManager.cpp Simulator.cpp NetworkManager.cpp Player.cpp Enemy.cpp Ball.cpp PlayerManager.cpp BallManager.cpp
 DodgeBall_CXXFLAGS = $(OGRE_CFLAGS) $(OIS_CFLAGS) $(bullet_CFLAGS) $(SDL_CFLAGS) $(SDL_mixer_CFLAGS) $(SDL_net_CFLAGS)
 DodgeBall_LDADD = $(OGRE_LIBS) $(OIS_LIBS) $(bullet_LIBS) $(SDL_LIBS) $(SDL_mixer_LIBS)  $(SDL_net_LIBS)
 
